# c-calculator

./: .gitignore
Algebra/: CMakeLists.txt  conanfile.py
Algebra/addition/: CMakeLists.txt  conanfile.py
Algebra/addition/New folder/: conanfile.py  hello.sln  hello.vcxproj
Algebra/addition/New folder/test_package/: conanfile.py  test_hello.sln  test_hello.vcxproj
Algebra/addition/src/: addition.cpp
Algebra/division/: CMakeLists.txt
Algebra/division/src/: division.cpp
Algebra/inputoutput/: CMakeLists.txt
Algebra/inputoutput/include/inputoutput/: inputoutput.h
Algebra/inputoutput/src/: inputoutput.cpp
Algebra/multiplication/: CMakeLists.txt
Algebra/multiplication/src/: multiplication.cpp
Algebra/subtraction/: CMakeLists.txt
Algebra/subtraction/src/: subtraction.cpp
calculator/: CMakeLists.txt  conanfile.txt
calculator/AlgebraLibs/Addition/: Addition.lib  addition-config-release.cmake  addition-config.cmake
calculator/AlgebraLibs/Division/: Division.lib  division-config-release.cmake  division-config.cmake
calculator/AlgebraLibs/Division/include/Division/: division.h
calculator/AlgebraLibs/InputOutput/: InputOutput.lib  inputoutput-config-release.cmake  inputoutput-config.cmake
calculator/AlgebraLibs/Multiplication/: Multiplication.lib  multiplication-config-release.cmake  multiplication-config.cmake
calculator/AlgebraLibs/Subtraction/: Subtraction.lib  subtraction-config-release.cmake  subtraction-config.cmake
calculator/AlgebraLibs/addition/x64/gcc11.3/lib/: addition-config-noconfig.cmake  addition-config.cmake
calculator/AlgebraLibs/addition/x64/msvc16/lib/: addition-config-release.cmake  addition-config.cmake  addition.lib
calculator/AlgebraLibs/division/x64/gcc11.3/lib/: division-config-noconfig.cmake  division-config.cmake
calculator/AlgebraLibs/division/x64/msvc16/lib/: division-config-release.cmake  division-config.cmake  division.lib
calculator/AlgebraLibs/inputoutput/x64/gcc11.3/lib/: inputoutput-config-noconfig.cmake  inputoutput-config.cmake
calculator/AlgebraLibs/inputoutput/x64/msvc16/lib/: inputoutput-config-release.cmake  inputoutput-config.cmake  inputoutput.lib
calculator/AlgebraLibs/multiplication/include/multiplication/: multiplication.h
calculator/AlgebraLibs/multiplication/x64/gcc11.3/lib/: multiplication-config-noconfig.cmake  multiplication-config.cmake
calculator/AlgebraLibs/multiplication/x64/msvc16/lib/: multiplication-config-release.cmake  multiplication-config.cmake  multiplication.lib
calculator/AlgebraLibs/subtraction/x64/gcc11.3/lib/: subtraction-config-noconfig.cmake  subtraction-config.cmake
calculator/AlgebraLibs/subtraction/x64/msvc16/lib/: subtraction-config-release.cmake  subtraction-config.cmake  subtraction.lib
calculator/include/calculator/: calculator.h
calculator/src/: main.cpp
